yamls/autopod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels: # label of pod 
    x: helloashutoshh # key: value --
  name: ashupod1
spec:
  containers:
  - command:
    - ping
    - localhost
    image: alpine
    name: ashupod1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
