yamls/headless.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: headless
  name: headless
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None # important 
  selector:
   app: d11
