yamls/old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: mydashboard-rule1 # name of rule ingress
 namespace: kubernetes-dashboard # namespace where to apply 
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /$2
  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  nginx.ingress.kubernetes.io/configuration-snippet: |
   rewrite ^(/dashboard)$ $1 redirect; 

spec: 
 rules: # to define rules by considering we are using external LB ip but No DNS
 - http:
    paths:
    - path: /dashboard(/|$)(.*)
      backend: 
       serviceName: kubernetes-dashboard # service type cluster 
       servicePort: 443
